# Liquid-LLM

./: LICENSE  build_manifests.py  env.yml  requirements.txt
Liquid-LLM/: .gitignore  DATA_CARD.md  README.md
Liquid-LLM/data/: README.md
Liquid-LLM/models/: README.md
Liquid-LLM/notebooks/: colab_train.ipynb
Liquid-LLM/scripts/: gen_teacher_logits.py  make_self_instruct.py  smoke_test.py
Liquid-LLM/src/: lnn_lm.py  ltc_cell.py  tokenization.py  train_kd.py
liquid_llm_vertex_pkg_stage1/: README.md  requirements.txt  setup.py
liquid_llm_vertex_pkg_stage1/stage1/: __init__.py  cli.py  data.py  eval.py  gcs_io.py  losses.py  model_init.py  runtime_setup.py  teacher.py  train.py  utils.py
liquid_llm_vertex_pkg_stage1/stage1/tool_use/: __init__.py  calculator.py  registry.py  scratchpad.py  traces.py
liquid_llm_vertex_pkg_stage1/tests/: test_attention_backend.py  test_kd_loss.py  test_tool_pipeline.py
vertex/: args-2.txt  requirements.txt
vertex/Model-Surgery/Model-Surgery/: requirements.txt  stage1_model_surgery_adaptive.ipynb
vertex/package/Stage_1/: .gitignore  README.md  README_vertex.md  pyproject.toml
vertex/package/Stage_1/Stage_1/: __init__.py  cli.py  launcher.py  logging_utils.py  trainer.py
vertex/package/Stage_1/Stage_1/checkpoints/: __init__.py  saver.py
vertex/package/Stage_1/Stage_1/configs/: default_stage1.yaml  stage1.jsonl
vertex/package/Stage_1/Stage_1/data/: __init__.py  asdiv_sft.py  c4_small_filtered.py  datamix.py  dolma_subset.py  fineweb_edu_subset.py  gsm8k_sft.py  manifest_parser.py  svamp_sft.py  the_stack_v2_filtered.py  wikipedia.py  wikitext.py
vertex/package/Stage_1/Stage_1/distillation/: __init__.py  kd_losses.py  teacher_llama31_8b.py
vertex/package/Stage_1/Stage_1/models/: __init__.py  attention.py  config.py  stage1_model.py
vertex/package/Stage_1/Stage_1/models/blocks/: __init__.py  classic_block.py  liquid_block.py
vertex/package/Stage_1/Stage_1/monitoring/: __init__.py  health.py  logger.py  metrics.py
vertex/package/Stage_1/Stage_1/runbooks/: README_STAGE1.md  arguments.txt
vertex/package/Stage_1/Stage_1/tools/: __init__.py  calculator.py  scratchpad.py  tool_trace_injector.py
vertex/package/Stage_1/Stage_1/tools/tests/: test_calculator.py  test_scratchpad.py  test_tool_parser.py
vertex/package/Stage_1/Stage_1/utils/: __init__.py  attention.py  config_utils.py  ddp.py  io.py  schedule.py  secrets.py
vertex/package/Stage_1/Stage_1/vertex/: __init__.py  entrypoint.py
vertex/package/Stage_1/Stage_1/wheels/: flash_attn-2.6.3-cp310-cp310-manylinux_x86_64.whl
vertex/package/Stage_1/pythonjsonlogger/: __init__.py  jsonlogger.py
vertex/package/Stage_1/trainer/: __init__.py  entrypoint.py
vertex/package/liquid_llm_vertex_full/: README.md  pyproject.toml
vertex/package/liquid_llm_vertex_full/scripts/: upload_wheel.sh
vertex/package/liquid_llm_vertex_full/src/trainer/: args.py  entrypoint.py  secrets.py  vertex_env.py
vertex/package/liquid_llm_vertex_pkg_1024/: pyproject.toml  vertex_args.txt
vertex/package/liquid_llm_vertex_pkg_1024/scripts/: upload_wheel.sh
vertex/package/liquid_llm_vertex_pkg_1024/src/liquid_llm/io/: checkpoints.py
vertex/package/liquid_llm_vertex_pkg_1024/src/liquid_llm/training/: evaluation.py  loop.py  schedules.py  stage0.py
vertex/package/liquid_llm_vertex_pkg_1024/src/trainer/: args.py  schedules.py
vertex/package/liquid_llm_vertex_pkg_1024_next/: README.md  pyproject.toml  setup.cfg
vertex/package/liquid_llm_vertex_pkg_1024_next/liquid_llm/: __init__.py  checkpointer.py  eval.py  kd.py  logging_utils.py  pipeline_kfp_v2.py  train.py
vertex/package/liquid_llm_vertex_pkg_1024_next/trainer/: __init__.py  entrypoint.py
vertex/package/liquid_llm_vertex_pkg_3/: README.md  pyproject.toml
vertex/package/liquid_llm_vertex_pkg_3/configs/: accelerate.cpu.yaml
vertex/package/liquid_llm_vertex_pkg_3/scripts/: upload_wheel.sh
vertex/package/liquid_llm_vertex_pkg_3/src/trainer/: args.py  entrypoint.py  secrets.py
vertex/package/liquid_llm_vertex_pkg_4/: README.md  pyproject.toml  vertex_args.txt
vertex/package/liquid_llm_vertex_pkg_4/configs/: accelerate.single_gpu.yaml  training.stage0.yaml
vertex/package/liquid_llm_vertex_pkg_4/scripts/: run_local.sh
vertex/package/liquid_llm_vertex_pkg_4/src/trainer/: entrypoint.py  secrets.py
vertex/package/liquid_llm_vertex_pkg_4_annealing/: README_annealing.md  pyproject.toml  vertex_args.txt
vertex/package/liquid_llm_vertex_pkg_4_annealing/src/trainer/: args.py
vertex/package/liquid_llm_vertex_pkg_stage1/: README.md  requirements.txt  setup.py
vertex/package/liquid_llm_vertex_pkg_stage1/stage1/: cli.py  data.py  eval.py  gcs_io.py  losses.py  model_init.py  runtime_setup.py  teacher.py  train.py  utils.py
vertex/package/liquid_llm_vertex_pkg_stage1/tests/: test_checkpoint_upload.py  test_dry_run.py  test_flash_attn.py  test_kd_online_step.py  test_manifest_prefer_shards.py  test_precompute_loader.py  test_prep_normalize_uri.py  test_prep_shards_ready.py  test_sdp_attention.py  test_teacher_kd.py  test_tools.py
vertex/package/sandbox/preprocess-toolkit/: README.md
vertex/package/sandbox/preprocess-toolkit/tests/: test_gcs_io.py  test_shard.py  (+1 more)
vertex/package/sanity_check/: README.md  VERTEX_CUSTOM_JOB_ARGS.txt  requirements.txt  setup.py
vertex/package/sanity_check/sanity_check/: __init__.py  cli.py  io_gcs.py  logutil.py  model_build.py  runner.py  tests_env.py  tests_model.py  tests_perf.py  types.py
vertex/package/sanity_check/trainer/: __init__.py  entrypoint.py
vertex/package/stage-1-hybrid/stage1_hybrid/: cli.py  data.py  model_init.py  precompute_hybrid_logits.py  train.py
vertex/trainer/: entrypoint.py
(+27 files in other folders)
