[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Stage-1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.4.0,<2.5.0",
  "transformers==4.57.0",
  "accelerate==1.10.1",
  "datasets==2.20.0",
  "tokenizers==0.22.1",
  "sentencepiece>=0.2.0",
  "safetensors>=0.6.2",
  "einops>=0.8.0",
  "huggingface_hub>=0.23.2",
  "fsspec==2024.5.0",
  "gcsfs==2024.5.0",
  "google-cloud-storage==2.18.2",
  "google-cloud-secret-manager==2.24.0",
  "pyyaml>=6.0.2",
  "tqdm>=4.66.4",
  "numpy>=1.26.4,<2.0",
  "pyarrow<15",
]

authors = []

[tool.setuptools]
package-dir = {"" = "Stage_1"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["Stage_1"]
include = ["Stage_1*", "trainer*"]

[tool.setuptools.package-data]
"Stage_1" = [
    "configs/*.yaml",
    "configs/*.jsonl",
    "runbooks/*.txt",
    "monitoring/*.yaml",
    "monitoring/*.json",
    "data/**/*.json",
]

[project.scripts]
stage1-train = "Stage_1.cli:main"
