[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stage-1"
version = "0.1.0"
requires-python = ">=3.10"
description = "Stage 1 training package for Vertex AI"
dependencies = [
  "torch>=2.4.0,<2.5.0",
  "transformers==4.57.0",
  "accelerate==1.10.1",
  "datasets==2.20.0",
  "tokenizers==0.22.1",
  "sentencepiece>=0.2.0",
  "safetensors>=0.6.2",
  "einops>=0.8.0",
  "huggingface_hub>=0.23.2",
  "fsspec==2024.5.0",
  "gcsfs==2024.5.0",
  "google-cloud-storage==2.18.2",
  "google-cloud-secret-manager==2.24.0",
  "pyarrow>=15.0.0,<16.0.0",
  "numpy>=1.26.4,<2.0.0",
  "pyyaml>=6.0.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["Stage_1*","pythonjsonlogger*"]

[tool.setuptools.package-data]
"Stage_1" = [
  "configs/*.yaml",
  "configs/*.json",
  "configs/*.jsonl",
  "monitoring/*.yaml",
  "monitoring/*.json",
  "runbooks/*.txt",
  "data/**/*.json"
]

[project.scripts]
stage1-train = "Stage_1.vertex.entrypoint:main"
