[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "liquid_llm_vertex_pkg_1024"
version = "0.0.1"
description = "Vertex AI custom training package for Liquid-LLM Stage 0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "accelerate==0.33.0",
  "transformers==4.43.3",
  "datasets==2.20.0",
  "einops",
  "sentencepiece",
  "huggingface_hub>=0.23",
  "pyarrow>=15,<16",
  "google-cloud-storage>=2.16.0",
  "google-cloud-secret-manager>=2.20.0",
  "python-json-logger>=3.2.1",
  "tqdm",
  "numpy<2.0.0,>=1.17"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["trainer*", "liquid_llm*"]

[tool.setuptools]
package-dir = {"" = "src"}
