[metadata]
name = liquid-llm-vertex-pkg-1024-next
version = 0.1.0
description = Liquid LLM Vertex utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Liquid LLM
license = Apache-2.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    pyyaml

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    llm-train = liquid_llm.train:main
    llm-eval = liquid_llm.eval:main
    llm-pipeline = liquid_llm.pipeline_kfp_v2:main
